<resources>
    <string name="app_name">Self-Help</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="tasks">Med Reminder List</string>
    <string name="logout">LODOUT</string>
    <string name="med_reminder">Med Intake List</string>
    <string name="know_your_med">Know Your Medicine</string>
    <string name="first_aid_tips">Basic First Aid Tips</string>
    <string name="health_tips">Some Health Tips</string>
    <string name="corona">Corona Related Tips</string>
    <string name="nearby_hospitals">Self-Help</string>
    <string name="splash_heading">Self-Help</string>
    <string name="my_email">manprit.student.mat19@itbhu.ac.in</string>
    <string name="akash_email">akash.kannaujiya.mat19@itbhu.ac.in</string>
    <string name="dev_email">devkumar.seth.cd.mat19@itbhu.ac.in</string>
    <string name="nilesh_email">nileshp.prakash.mat19@itbhu.ac.in</string>
    <string name="anti_bacterial_wipes">Anti-bacterial wipes</string>
    <string name="painkillers">Painkillers</string>
    <string name="gauze_pads">Gauze pads</string>
    <string name="sunscreen">Sunscreen</string>
    <string name="medical_gloves">Medical gloves</string>
    <string name="medical_instrument_kit">Medical instrument kit</string>
    <string name="bandages_band_aids">Bandages/Band-Aids</string>
    <string name="antiseptic_wipes">Antiseptic wipes</string>
    <string name="first_aid_instructions">First aid instructions</string>
    <string name="safety_pins">Safety pins</string>
    <string name="scissors">Scissors</string>
    <string name="adhesive_cloth_tape">Adhesive cloth tape</string>
    <string name="thermometer">Thermometer</string>
    <string name="instant_cold_pack">Instant cold pack</string>
    <string name="first_aid_checklist">FIRST AID CHECKLIST</string>
</resources>