<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imgIconAbout"
        android:layout_width="205dp"
        android:layout_height="207dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appicon" />

    <TextView
        android:id="@+id/txtNameAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="Self-Help"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imgIconAbout"
        app:layout_constraintStart_toStartOf="@+id/imgIconAbout"
        app:layout_constraintTop_toBottomOf="@+id/imgIconAbout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version:1.0"
        app:layout_constraintEnd_toEndOf="@+id/txtNameAbout"
        app:layout_constraintStart_toStartOf="@+id/txtNameAbout"
        app:layout_constraintTop_toBottomOf="@+id/txtNameAbout" />

    <TextView
        android:id="@+id/textHeadingAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/playfair_display"
        android:text="Designed and Developed By:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtAbout1"
        android:layout_width="99dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="MANPRIT"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textHeadingAbout" />

    <TextView
        android:id="@+id/txtAbout12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textColor="#F84646"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout1" />

    <TextView
        android:id="@+id/txtAbout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="DEV KUMAR SETH"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout1" />

    <TextView
        android:id="@+id/txtAbout22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_email"
        android:textColor="#F84646"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout2" />

    <TextView
        android:id="@+id/txtAbout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="NILESH PREM PRAKASH"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout2" />

    <TextView
        android:id="@+id/txtAbout32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nilesh_email"
        android:textColor="#F84646"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout3" />

    <TextView
        android:id="@+id/txtAbout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="AKASH KANNAUJIA"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout3" />

    <TextView
        android:id="@+id/txtAbout42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akash_email"
        android:textColor="#F84646"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="31dp" />

</androidx.constraintlayout.widget.ConstraintLayout>